forgot to add updates

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -22,25 +22,41 @@ foreground            #e5e1db
 # selection_foreground  #2b2b2b
 
 
-selection_background  	#5b5b5b
-selection_foreground  	#323232
-color0                	#353535
-color8                	#535353
-color1                	#d25252
-color9                	#f00c0c
-color2                	#a4c161
-color10               	#c1df74
-color3                	#ffc56d
-color11               	#e1e48a
-color4                	#6c99ba
-color12               	#8ab6d9
-color5                	#d096d9
-color13               	#efb5f7
-color6                	#bdd6ff
-color14               	#dbf4ff
-color7                	#ededec
-color15               	#ffffff
+# selection_background  	#5b5b5b
+# selection_foreground  	#323232
+# color0                	#353535
+# color8                	#535353
+# color1                	#d25252
+# color9                	#f00c0c
+# color2                	#a4c161
+# color10               	#c1df74
+# color3                	#ffc56d
+# color11               	#e1e48a
+# color4                	#6c99ba
+# color12               	#8ab6d9
+# color5                	#d096d9
+# color13               	#efb5f7
+# color6                	#bdd6ff
+# color14               	#dbf4ff
+# color7                	#ededec
+# color15               	#ffffff
 
+# color0                	#353535
+# color8                	#535353
+# color1                	#e8341c
+# color9                	#e05a4f
+# color2                	#68c256
+# color10               	#77b869
+# color3                	#f2d42c
+# color11               	#efd64b
+# color4                	#1c98e8
+# color12               	#387cd3
+# color5                	#8369c9
+# color13               	#957bbe
+# color6                	#1c98e8
+# color14               	#3d97e2
+# color7                	#bababa
+# color15               	#bababa
 
 # font config
 font_family      Operator Mono Lig Book
