--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -168,14 +168,14 @@ detect-client-opacity = true;
 
 # Specify refresh rate of the screen.
 # If not specified or 0, picom will try detecting this with X RandR extension.
-refresh-rate = 0;
+refresh-rate = 60;
 
 # Vertical synchronization: match the refresh rate of the monitor
 vsync = true;
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
 # Reported to have no effect, though.
-dbe = false;
+dbe = true;
 
 # Limit picom to repaint at most once every 1 / refresh_rate second to boost performance.
 # This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
