--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,6 @@
+unbind C-b
+set-option -g prefix C-Space
+
 bind r source-file ~/.config/tmux/tmux.conf \; display "Fresh Tmux Config!"
 
 setw -g mode-keys vi
@@ -5,6 +8,11 @@ setw -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel \; run -b "tmux save-buffer - | xclip -sel clip -i > /dev/null"
 bind y run -b "tmux save-buffer - | xclip -sel clip -i > /dev/null" \; display "Copied to system clipboard."
+
+unbind Left
+unbind Down
+unbind Up
+unbind Right
 
 bind h select-pane -L
 bind j select-pane -D
