--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -59,15 +59,17 @@ foreground            #e5e1db
 # color15               	#bababa
 
 # font config
-font_family      Operator Mono Lig Book
+font_family      Operator Mono Book
 bold_font        Operator Mono Medium
-italic_font      Operator Mono Lig Book Italic
+italic_font      Operator Mono Book Italic
 bold_italic_font Operator Mono Medium Italic
 
 font_size 11.0
 
 adjust_line_height 100%
 adjust_column_width 100%
+
+adjust_baseline 5%
 
 symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
 
@@ -82,15 +84,18 @@ focus_follows_mouse no
 allow_remote_control yes
 
 enable_audio_bell no
-window_alert_on_bell no
+window_alert_on_bell yes
 bell_on_tab no
 
 copy_on_select no
 
-open_url_modifiers kitty_mod
-open_url_with google_chrome_unstable
+# open_url_modifiers kitty_mod
+open_url_with google-chrome-stable
 
-window_padding_width 10 
+window_padding_width 10
 
 # use nvim as pager
 scrollback_pager nvim -c 'set ft=man'
+
+# don't do cursor blink
+cursor_blink_interval 0
