--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,3 +19,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+set -g default-terminal "screen-256color"
+set -g status-bg color99
+set -g status-fg black
+set -g pane-active-border-style fg=color99
