--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,14 +1,22 @@
+# prefix
 unbind C-b
 set-option -g prefix C-Space
 
-bind r source-file ~/.config/tmux/tmux.conf \; display "Fresh Tmux Config!"
+# reloading
+bind r source-file ~/.config/tmux/tmux.conf \; display "reloaded"
 
+# vi mode
 setw -g mode-keys vi
 
+# clipboard
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel \; run -b "tmux save-buffer - | xclip -sel clip -i > /dev/null"
-bind y run -b "tmux save-buffer - | xclip -sel clip -i > /dev/null" \; display "Copied to system clipboard."
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel \
+    ; run -b "tmux save-buffer - | xclip -sel clip -i > /dev/null"
 
+# im not sure why this is here or what it does
+# bind y run -b "tmux save-buffer - | xclip -sel clip -i > /dev/null"
+
+# movement
 unbind Left
 unbind Down
 unbind Up
@@ -19,7 +27,15 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# open panes in current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+# status bar
 set -g default-terminal "screen-256color"
-set -g status-bg color99
-set -g status-fg black
-set -g pane-active-border-style fg=color99
+set -g status-bg color145
+set -g status-fg color235
+set -g pane-active-border-style fg=color243
+
+# history
+set-option -g history-limit 5000
